--- a/app/frames/frame.settings.css
+++ b/app/frames/frame.settings.css
@@ -1,51 +1,14 @@
-.input-group {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
 .container {
     display: flex;
     flex-wrap: wrap;
+    width: 90%;
     gap: 2rem; /* Adjust the gap as needed */
 }
 
-.column {
-    flex: 1;
-    min-width: 300px; /* Adjust the minimum width as needed */
-}
-
-.h-screen {
-    height: 100vh;
-}
-
-.w-screen {
-    width: 100vw;
-}
-
-.bg-transparent {
-    background-color: transparent;
-}
-
-.gap-y-10 {
-    gap: 2.5rem; /* 10 * 0.25rem */
-}
-
-.grid-flow-row {
-    display: grid;
-    grid-auto-flow: row;
-}
-
-.gap-2 {
-    gap: 0.5rem; /* 2 * 0.25rem */
-}
-
-.m-2 {
-    margin: 0.5rem; /* 2 * 0.25rem */
-}
-
-.bg-gray-500 {
-    background-color: #6b7280; /* Tailwind CSS gray-500 */
+.items-container {
+    /*height: 300px; /* Example fixed height */
+    overflow-y: auto;
+    gap: 1rem; /* Adjust the gap as needed */
 }
 
 .point-item {
@@ -65,4 +28,13 @@
 
 .point-item .selected-tab:hover {
     background-color: darkred;
+}
+
+.buttons-continer {
+    display: flex;
+    align-items: center; /* Prevent stretching */
+}
+
+.selected-tab {
+    height: 40px; /* Set a fixed height */
 }
