remove duplicate input in settings

--- a/app/components/input.css
+++ b/app/components/input.css
@@ -1,6 +1,5 @@
 .input-group {
     display: flex;
-    flex-direction: column;
     gap: 0.5rem;
     width: 100%;
 }
@@ -16,6 +15,7 @@
 
 .hidden-span {
     visibility: hidden;
+    position: absolute;
     white-space: nowrap;
 }
 
