--- a/app/frames/frame.settings.css
+++ b/app/frames/frame.settings.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column ;
     width: 90%;
     gap: 2rem; /* Adjust the gap as needed */
 }
@@ -8,6 +9,7 @@
 .items-container {
     /*height: 300px; /* Example fixed height */
     overflow-y: auto;
+    flex-direction: column;
     gap: 1rem; /* Adjust the gap as needed */
 }
 
@@ -33,6 +35,7 @@
 
 .buttons-continer {
     display: flex;
+    flex-direction: column ;
     align-items: center; /* Prevent stretching */
 }
 
