--- a/app/components/styles/listbox.css
+++ b/app/components/styles/listbox.css
@@ -9,3 +9,12 @@
     width: 100%; /* Ensure the container takes full width */
     height: 100%; /* Ensure the container takes full height */
 }
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+}
